sift_anatomy_20140420_extra.tar.gz
 - first to contain describe_keys.c

sift_anatomy_20140530.tar.gz
 - Review pascal Getreuer part 1.
 - const variable
 - lib_util.c (max tab)..
 - assert


sift_anatomy_20140609.tar.gz
 - Review Pascal Getreuer part 2.

// 20140609
- Bug in the normalization of the feature vector.
This is not bin*255/max(bins) but bin*512/norml2(bins)

// 20140611
- sqrt(2) replace by a define
- bug in assert tests comparing floats that can be equal
  correction use FLOAT_EPSILON to include the equality case.
  in lib_descriptor in assert M_PI
- M_PI was defined twice with various number of decimals
- fmod to express the gradient in 0 2pi (atan2 gives in -pi pi)
   the problem fmod(x+10*M_PI,2*M_PI) -> fmod(x+2*M_PI,2*M_PI)
- Extrema interpolation. Possible difference between anatomy and lowe binaries.
  If the offset in scale is larger than 0.5 (the half distance between two
  scale samples) Lowe doesn't (I believe) jump to the next scale. Only, change
  sin position are implemented.  Observations: With this sampling parameters
  the threshold over the offset has an impact on the keypoint location (number
  of keypoints position) Visually, our results are more similar to Lowe's if we
  don't

// 20140616
 - in a few assert. replaced FLT_FLOAT with a larger constant EPSILON.
 - in lib_util linear_conversion : response in [0,1]. skip the normalization if the vector
   is constant (0 division)
 - array_max
 - array_min
 - find_array_max
 - fixed index in description  (s+1) -> s. This is the index used to chose the
   layer of the octace (gradient).

// 20140618
 - bug, find two first minima of an array
 - new functions in lib_util.c (euclidean_distance  euclidean_distance_square)
 - TODO, the comparison should be performed on the squared euclidean distance
   (for speed and precision).  tested it gives the same result than euclidean
   distance and exactly the same result as Lowe's code (siftDemoV4/match.c).

// 20140630